# legacy

./: CMakeLists.txt  README.md
lorenz/: lorenz_ode.cpp
md/: md.cpp
naca/: CMakeLists.txt  naca.cpp  naca.hpp  naca_test.cpp
naca/output/: cambered_data.txt  symmetric_data.txt
